buildscript {
	repositories {
		mavenCentral()
	}
	dependencies {
		classpath("org.springframework.boot:spring-boot-gradle-plugin:1.5.7.RELEASE")
		classpath("io.spring.gradle:dependency-management-plugin:0.5.6.RELEASE")
	}
}

plugins {
	id 'java'
	id 'net.ltgt.errorprone' version '0.0.11'
}

apply plugin: 'eclipse'
apply plugin: 'idea'
apply plugin: 'org.springframework.boot'
apply plugin: "io.spring.dependency-management"

jar {
	baseName = 'adrestia'
	version =  '0.1.0'
}

repositories {
	mavenCentral()
}

sourceCompatibility = 1.8
targetCompatibility = 1.8


dependencyManagement {
    imports {
        mavenBom "org.springframework.cloud:spring-cloud-consul-dependencies:1.2.1.RELEASE"
    }
}

configurations {
	all*.exclude module : 'spring-boot-starter-logging'
}

dependencies {
	compile("org.zeromq:jeromq:0.4.2")
	compile("org.springframework.boot:spring-boot-starter-web")
	compile("org.springframework.boot:spring-boot-starter-actuator")
	compile('org.springframework.boot:spring-boot-starter-log4j2')
	compile('org.springframework.cloud:spring-cloud-starter-consul-all')
	compile('org.springframework.cloud:spring-cloud-consul-config')
	compile('com.fasterxml.jackson.core:jackson-databind')
	compile('com.fasterxml.jackson.dataformat:jackson-dataformat-yaml')
	compile('com.fasterxml.jackson.core:jackson-annotations')
	errorprone 'com.google.errorprone:error_prone_core:2.1.1'
	testCompile('org.springframework.boot:spring-boot-starter-test')
	testCompile("junit:junit")
}
